LATEST UPDATES - 05 Februari 2026
==============================

1. PERBAIKAN PWA GLOB PATTERNS (BUILD ERROR)
   - Memperbaiki error `glob pattern matching` pada `_payload.json` yang menyebabkan build warning/error.
   - Mengubah konfigurasi `workbox.globPatterns` menjadi eksplisit whitelist aset (`js, css, html, img, fonts`).
   - File yang disentuh:
     - nuxt-fe/nuxt.config.ts

2. IMPLEMENTASI UI & UPDATE PROMPT PWA
   - Menambahkan komponen `PwaNotification.vue` untuk menangani notifikasi update dan install prompt.
   - Fitur "New Content Available" dengan tombol refresh otomatis.
   - Fitur "Install App" prompt untuk men-trigger native install banner.
   - Integrasi global di `app.vue`.
   - File yang disentuh:
     - nuxt-fe/components/App/PwaNotification.vue (NEW)
     - nuxt-fe/app.vue

Timestamp: 2026-02-05 09:30:00

LATEST UPDATES - 04 Februari 2026
==============================

1. PERBAIKAN TYPEERROR & SYNTAX PADA EXAM EDITOR
   - Memperbaiki `TypeError: _ctx.updateQuestionMedia is not a function` pada `ExamEditor.vue`.
   - Menambahkan `updateQuestionMedia` ke dalam destructuring `useExamEditor` agar dapat diakses oleh template.
   - Memperbaiki syntax error pada `Sidebar.vue` (missing `<script setup>` dan `computed` import) untuk mendukung fitur reorder section.
   - Menginstal `vuedraggable` library yang diperlukan untuk fitur reorder.
   - File yang disentuh:
     - nuxt-fe/components/ExamEditor/ExamEditor.vue
     - nuxt-fe/components/ExamEditor/Sidebar.vue
     - nuxt-fe/package.json

2. DUKUNGAN AUDIO PADA HALAMAN UJIAN (QUESTION VIEW)
   - Implementasi tampilan audio untuk group/passage (listening passage) dan audio specific pada tiap soal.
   - Menambahkan field `groupAudio` pada interface `Question`.
   - Menyesuaikan prop passing pada `pages/test/[id].vue`.
   - File yang disentuh:
     - nuxt-fe/components/Test/QuestionView.vue
     - nuxt-fe/pages/test/[id].vue
     - nuxt-fe/composables/useTestSession.ts
